<resources>
    <string name="app_name">Xplore</string>
    <string name="welcome">კეთილი იყოს თქვენი მობრძანება Xplore-ში!</string>
    <string name="slide1_text">სანამ Xplore-ის გამოყენებას დაიწყებთ, პატარა შესავალი უნდა გავიაროთ.
        გაასრიალეთ გვერდი მარცხნივ რომ განაგრძოთ.</string>
    <string name="slide2_title">ჯგუფები</string>
    <string name="slide2_text">ასე გამოიყურება დაგეგმილი ლაშქრობა, დააჭირეთ რომ გუნდის გვერდი გახსნათ</string>
    <string name="slide2_example_group_leader_name">დათო ჩხეიძე</string>
    <string name="slide2_example_group_leader_reputationasdasdasd">100 რეპუტაცია</string>
    <string name="slide2_example_group_destination_name">დარიალის ხეობა</string>
    <string name="slide2_example_group_days_left">მაზეგ</string>
    <string name="slide2_example_group_duration">2 დღე</string>
    <string name="slide2_beenhere_description">გუნდიდან ერთი წევრი მაინც არის ნამყოფი იქ,
        სადაც გუნდი მიდის</string>
    <string name="slide2_invite_description">გუნდისგან მოწვევა გაქვთ მიღებული ან გაგზავნილი</string>
    <string name="slide2_group_member_count_description">გუნდის წევრების რაოდენობა</string>
    <string name="slide2_hike_duration_description">ლაშქრობის ხანგრძლივობა</string>
    <string name="slide2_hike_date">ლაშქრობის დასაწყისის თარიღი</string>
    <string name="slide3_title">ბიბლიოთეკა</string>
    <string name="slide3_text">ბიბლიოთეკაში შეგიძლიათ ნახოთ სალაშქრო მიმართულებებზე ინფორმაცია.
        თითოეული მიეკუთვნება კატეგორიას:</string>
    <string name="slide3_example_reserve_name">მტირალა</string>
    <string name="slide3_tent_description">ეროვნული პარკი</string>
    <string name="slide3_castle_description">სახელმწიფო ნაკრძალი, გამოირჩევა ისტორიული ძეგლებით</string>
    <string name="slide3_paw_description">აღკვეთილი, გამოირჩევა ცხოველების მრავალფეროვნებით</string>
    <string name="slide3_tree_description">დაცული ლანდშაფტი, გააჩნია უნიკალური ფლორა</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_profile">პროფილი</string>
    <string name="nav_lib">ბიბლიოთეკა</string>
    <string name="nav_map">რუკა</string>
    <string name="nav_groups">ჯგუფები</string>
    <string name="nav_my_groups">ჩემი ჯგუფები</string>
    <string name="nav_find_create">მოძებნე / შექმენი</string>
    <string name="nav_about">შესახებ</string>
    <string name="nav_settings">რეგულაცია</string>
    <string name="action_settings">რეგულაცია</string>
    <string name="activity_library_title">ბიბლიოთეკა</string>
    <string name="activity_maps_title">რუკა</string>
    <string name="activity_live_hike_title">ლაივ ლაშქრობა</string>
    <string name="activity_authorization_title">ავტორიზაცია</string>
    <string name="activity_create_group_title">შექმენი ჯგუფი</string>
    <string name="activity_choose_destination_title">ამოირჩიეთ მიმართულება</string>
    <string name="activity_search_users_title">მოძებნეთ ხალხი</string>
    <string name="activity_register_title">დარეგისტრირება</string>
    <string name="yes">დიახ</string>
    <string name="no">არა</string>
    <string name="done">დასტური</string>
    <string name="set">ამორჩევა</string>
    <string name="confirm">დასტური</string>
    <string name="okay">გასაგებია</string>
    <string name="remove">წაშლა</string>
    <string name="cancel">გაუქმება</string>
    <string name="accept">მიღება</string>
    <string name="reject">უარყოფა</string>
    <string name="refresh">განახლება</string>
    <string name="to_remove">ამოშლით</string>
    <string name="no_thanks">არა, გმადლობთ</string>
    <string name="sign_in_slash_register">შესვლა / რეგისტრაცია</string>
    <string name="search">ძებნა</string>
    <string name="loading">იტვირთება…</string>
    <string name="please_wait">გთხოვთ დაიცადოთ…</string>
    <string name="error">მოხდა შეცდომა</string>
    <string name="nothing_here">აქ არაფერია</string>
    <string name="search_hint">მოძებნეთ…</string>
    <string name="search_tags_hint">მოძებნეთ საკვანძო სიტყვებით</string>
    <string name="search_name_hint">მოძებნეთ სახელით</string>
    <string name="search_groups_hint">მოძებნეთ ჯგუფები</string>
    <string name="search_no_results">შედეგები ვერ მოიძებნა</string>
    <string name="wifi_connect_dialog">გთხოვთ ჩართოთ ინტერნეტი რომ განაგრძოთ.</string>
    <string name="unable_to_connect">ვერ მოხდა დაკავშირება</string>
    <string name="log_in_dialog">გთხოვთ გაიაროთ ავტორიზაცია რომ გამოიყენოთ ეს ფუნქცია</string>
    <string name="info_will_be_added">ინფორმაცია მალე დაემატება</string>
    <string name="you_gained">თქვენ მიიღეთ</string>
    <string name="you_gained_rep_suffix">რეპუტაცია!</string>
    <string name="invite">დაპატიჟე</string>
    <string name="invite_members">დაპატიჟე წევრები</string>
    <string name="manage_requests">თხოვნების ნახვა</string>
    <string name="cancel_invitation">მოწვევის გაუქმება</string>
    <string name="member_already_added">მომხმარებელი უკვე გუნდშია</string>
    <string name="member_added">გუნდის წევრი დაემატა</string>
    <string name="member_removed">გუნდის წევრი ამოიშალა</string>
    <string name="invitations_sent">მოსაწვევები გაიგზავნა!</string>
    <string name="user">მომხმარებელი</string>
    <string name="reputation">რეპუტაცია</string>
    <string name="email">ელ-ფოსტა</string>
    <string name="tel">ტელ</string>
    <string name="age">ასაკი</string>
    <string name="birth_date">დაბადების თარიღი</string>
    <string name="leader">ლიდერი</string>
    <string name="destination">მიმართულება</string>
    <string name="date">თარიღი</string>
    <string name="group_members">გუნდის წევრები</string>
    <string name="group_preferences">სასურველია</string>
    <string name="date_start">დაწყების თარიღი</string>
    <string name="date_end">დასასრულის თარიღი</string>
    <string name="extra_info">დამატებით ინფო</string>
    <string name="group_exp_help">
        ეს ნიშნავს, რომ გუნდის ერთი წევრი მაინც არის ნამყოფი ნაკრძალზე.
    </string>
    <string name="meetup_time">შეხვედრის დრო</string>
    <string name="meetup_location">შეხვედრის ადგილი</string>
    <string name="meetup">შეხვედრა</string>
    <string name="start_time">დაწყების დრო</string>
    <string name="end_time">დასასრულის დრო</string>
    <string name="cancel_join_request">გაწევრიანების თხოვნის გაუქმება</string>
    <string name="open_discussion">დისკუსიის ნახვა</string>
    <string name="open_live_hike">ლაივ ლაშქრობის ნახვა</string>
    <string name="finish_hike_question">დასრულდა ლაშქრობა</string>
    <string name="finish_hike_text">გსურთ გუნდის დახურვა?</string>
    <string name="search_by">ძებნა…</string>
    <string-array name="group_filters">
        <item>სახელი</item>
        <item>მიმართულება</item>
    </string-array>
    <string name="discussion_message_hint">დაწერეთ შეტყობინება…</string>
    <string name="today">დღეს</string>
    <string name="tomorrow">ხვალ</string>
    <string name="overmorrow">ზეგ</string>
    <string name="overovermorrow">მაზეგ</string>
    <string name="group_card_start_date_prefix" />
    <string name="group_card_start_date_suffix">დღეში</string>
    <string name="group_card_start_date_one_month">1 თვეში</string>
    <string name="group_card_start_date_month_suffix">თვეში</string>
    <string name="duration_zero_day">&lt; 1 დღე</string>
    <string name="duration_days">დღე</string>
    <string name="accept_invite">მოწვევის მიღება</string>
    <string name="decline_invite">მოწვევის გაუქმება</string>
    <string name="join_group">ჯგუფში გაწევრიანება</string>
    <string name="leave_group">ჯგუფის დატოვება</string>
    <string name="delete_group">ჯგუფის წაშლა</string>
    <string name="edit_group">ჯგუფის რედაქტირება</string>
    <string name="join_request_sent">გაწევრიანების თხოვნა გაგზავნილია</string>
    <string name="remove_member_question">გსურთ ამ გუნდის წევრის წაშლა?</string>
    <string name="received_requests">მიღებული თხოვნები</string>
    <string name="sent_requests">გაგზავნილი თხოვნები</string>
    <string name="delete_group_question">დარწმუნებული ხართ რომ ამ გუნდის წაშლა გსურთ?</string>
    <string name="leave_group_question">დარწმუნებული ხართ რომ ამ გუნდის დატოვება გსურთ?</string>
    <string name="group_left">თქვენ დატოვეთ ჯგუფი</string>
    <string name="request_accepted">თქვენი მოთხოვნა დადასტურდა!</string>
    <string name="enable_location">ჩართეთ ადგლიმდებარეობა</string>
    <string name="please_enable_location">გთხოვთ ჩართოთ ადგილმდებარეობა(Location)</string>
    <string name="wifi_connect_dialog_maps">
        გთხოვთ ჩართოთ ინტერნეტკავშირი რუკების გადმოსაწერად. ეს მხოლოდ ერთჯერადად არის საჭირო.
    </string>
    <string name="drop_pin_help">მიმართულების მისათითებლად რუკაზე დააჭირეთ თითი დიდი ხნით.
        უკვე დაგდებული პინის გადასაადგილებლად ასევე დააჭირეთ მას დიდი ხნით.</string>
    <string name="live_hike">ლაივ ლაშქრობა</string>
    <string name="live_hike_notification_name">Xplore - ლაივ ლაშქრობა</string>
    <string name="live_hike_notification_description">მიმდინარეობს ადგილმდებარეობის განახლება</string>
    <string name="lib_fauna_header">ფაუნა</string>
    <string name="lib_flora_header">ფლორა</string>
    <string name="lib_tags_header">ტეგები</string>
    <string name="lib_equip_header">აღჭურვილობა</string>
    <string name="lib_difficulty_header">სირთულე</string>
    <string name="show_on_map">იხილეთ რუკაზე</string>
    <string name="find_hikes_with_this_destination">ნახეთ დაგეგმილი ლაშქრობები</string>
    <string name="group_name">ჯგუფის დასახელება</string>
    <string name="group_name_help">
        დაარქვით ჯგუფს ისეთი სახელი რომელიც აღწერს ჯგუფის გეზს ისეთი რამ, რაც გუნდის წევრებს აქვთ საერთო.
    </string>
    <string name="choose_destination">ამოირჩიეთ მიმართულება</string>
    <string name="choose_from">ამოირჩიეთ ერთ-ერთიდან…</string>
    <string name="question_choose_reserve">დარწმუნებული ხართ რომ გინდათ ამოირჩიოთ</string>
    <string name="question_has_visited">ნაცნობია გუნდისთვის ეს ადგილი?</string>
    <string name="group_prefs_help">ამ ველში უნდა მიუთითოთ როგორი გუნდის წევრებია თქვენი
        გუნდისთვის სასურველი.\n\nმაგ: ვინმე, ვინც გამოცდილია და გუნდს არ ჩამორჩება…</string>
    <string name="extra_info_help">ამ ველში უნდა მიუთითოთ დამატებით ინფორმაცია რაც შეიძლება ახალ
        გუნდის წევრს გამოადგეს.\n\nმაგ: ნაკრძალამდე მივდივართ ერთად, 11ზე გავდივართ რუსთაველის
        მეტროდან…</string>
    <string name="what_is_this">რას ნიშნავს ეს?</string>
    <string name="dest_field_incomplete">გთხოვთ, ამოირჩიოთ მიმართულება.</string>
    <string name="exp_field_incomplete">გთხოვთ, უპასუხოთ დასმულ კითხვას.</string>
    <string name="date_start_field_incomplete">გთხოვთ, მიუთითოთ დასაწყისის თარიღი.</string>
    <string name="date_end_field_incomplete">გთხოვთ, მიუთითოთ დასასრულის თარიღი.</string>
    <string name="text_field_incomplete">გთხოვთ, ფორმა შეავსოთ სრულად.</string>
    <string name="date_invalid">
        დასასრულის თარიღი დაწყებამდე ვერ იქნება.\n\nგთხოვთ, შეასწოროთ შეცდომა.
    </string>
    <string name="date_past_invalid">
        დასაწყისის ან დასასრული თარიღი ვერ იქნება წარსულში.\n\nგთხოვთ, შეასწოროთ შეცდომა.
    </string>
    <string name="group_created">ჯგუფი შეიქმნა!</string>
    <string name="fix_start_end_times">გთხოვთ შეასწოროთ დაწყებისა და დასრულების დროები</string>
    <string name="remove_members_long_press">(დიდხანს დააჭირეთ წევრს, რომლის ამოშლაც გსურთ)</string>
    <string name="register">რეგისტრაცია</string>
    <string name="or">ან</string>
    <string name="password">პაროლი</string>
    <string name="incorrect_credentials">ელ-ფოსტა ან პაროლი არასწორია</string>
    <string name="first_name">სახელი</string>
    <string name="settings_title">რეგულაცია</string>
    <string name="settings_account_title">მომხმარებელი</string>
    <string name="settings_language_title">ენა</string>
    <string name="current_language_georgian">ქართული</string>
    <string name="current_language_english">English</string>
    <string name="current_language_russian">Русский</string>
</resources>