<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_title">
        <Preference
            android:key="tutorial"
            android:title="Tutorial" />
        <Preference
            android:key="view_reserve_types"
            android:title="View reserve types" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_account_title">
        <Preference
            android:key="logout"
            android:title="Log out" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_language_title">
        <Preference
            android:key="select_language"
            android:title="Select Language"/>
    </PreferenceCategory>

</PreferenceScreen>
