<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for outsiders when viewing a group -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/requestSentTextView"
            android:text="@string/join_request_sent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="16sp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"/>


        <!-- Join Group -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/joinGroupButton"
            android:text="@string/join_group"
            android:padding="@dimen/controls_button_text_padding"
            android:textSize="@dimen/controls_button_text_size"
            android:fontFamily="sans-serif-medium"
            app:backgroundTint="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Cancel Join Request -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancelJoinRequestButton"
            android:visibility="gone"
            android:text="@string/cancel_join_request"
            android:padding="@dimen/controls_button_text_padding"
            android:textSize="@dimen/controls_button_text_size"
            android:layout_below="@id/requestSentTextView"
            android:fontFamily="sans-serif-medium"
            app:backgroundTint="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</FrameLayout>