<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:scrollbars="none"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/activity_authorization_title"
            android:textColor="@color/colorDarkGrey"
            android:textSize="25sp"
            android:visibility="gone"
            android:textStyle="bold" />

        <ImageView
            android:src="@drawable/login_page_banner"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/emailEditText"
            android:padding="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/passwordEditText"
            android:background="@drawable/edit_text_border"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/xploreSignInButton"
            android:textColor="@color/colorDarkGrey"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            app:backgroundTint="@color/colorAccent"
            android:text="@string/sign_in_slash_register"
            android:textStyle="bold" />

        <TextView
            android:text="@string/or"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textAllCaps="true"
            android:layout_margin="25dp"
            android:textColor="@color/colorDarkGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
        </com.google.android.gms.common.SignInButton>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebookSignInButton"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

</ScrollView>