<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/activity_authorization_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textColor="@color/colorDarkGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/log_in_dialog"
        android:textSize="18sp"
        android:lineSpacingExtra="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/no_signin_tw"
            android:text="No, thanks."
            android:textSize="17.2sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textStyle="italic"
            android:textColor="@color/colorGreyText"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/signin_btn"
            android:text="@string/sign_in_slash_register"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_above="@id/no_signin_tw"
            app:backgroundTint = "@color/colorAccent" />

    </RelativeLayout>

</LinearLayout>