<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/slide3_background"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:fadeScrollbars="false"
    android:scrollbarThumbVertical="@drawable/scrollbar_white"
    android:scrollbarTrackVertical="@color/scrollbarTrack"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/slide3_title"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/welcome_screen_title_size"
            android:textColor="@color/welcome_screen_slide_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <!-- Example reserve card -->
        <include layout="@layout/example_reserve_card"/>

        <!-- Library description -->
        <TextView
            android:text="@string/slide3_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textAlignment="center"
            android:textColor="@color/welcome_screen_slide_text"
            android:textSize="@dimen/welcome_screen_text_size" />

        <!-- Tent description -->
        <LinearLayout style="@style/slide_icon_description_linear_layout">

            <ImageView
                android:src="@drawable/ic_tent_black_48dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/icon_background"
                android:scaleType="centerCrop"
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <TextView
                android:text="@string/slide3_tent_description"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/welcome_screen_text_size"
                android:textColor="@color/welcome_screen_slide_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Castle description -->
        <LinearLayout style="@style/slide_icon_description_linear_layout">

            <ImageView
                android:src="@drawable/ic_castle_black_48dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/icon_background"
                android:scaleType="centerCrop"
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <TextView
                android:text="@string/slide3_castle_description"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/welcome_screen_slide_title"
                android:textSize="@dimen/welcome_screen_text_size" />

        </LinearLayout>

        <!-- Paw description -->
        <LinearLayout style="@style/slide_icon_description_linear_layout">

            <ImageView
                android:src="@drawable/ic_paw_black_48dp"
                android:layout_gravity="center_vertical"
                android:tint="@color/black"
                android:background="@drawable/icon_background"
                android:scaleType="centerCrop"
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <TextView
                android:text="@string/slide3_paw_description"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/welcome_screen_text_size"
                android:textColor="@color/welcome_screen_slide_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Tree description -->
        <LinearLayout style="@style/slide_icon_description_linear_layout">

            <ImageView
                android:src="@drawable/ic_nature_people_black_48dp"
                android:layout_gravity="center_vertical"
                android:tint="@color/black"
                android:background="@drawable/icon_background"
                android:scaleType="centerCrop"
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <TextView
                android:text="@string/slide3_tree_description"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/welcome_screen_text_size"
                android:textColor="@color/welcome_screen_slide_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />
git
    </LinearLayout>

</ScrollView>