<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for leader when viewing group -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/openDiscussionButton"
        android:text="დისკუსიის ნახვა"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.Space
        android:id="@+id/separator"
        android:layout_centerHorizontal="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <!-- Invite Members -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/inviteMembersButton"
        android:text="@string/invite_members"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/openDiscussionButton"
        android:layout_marginLeft="2dp"
        android:layout_toLeftOf="@id/separator"
        android:padding="@dimen/controls_button_text_padding"
        android:fontFamily="sans-serif-medium"
        app:backgroundTint="@color/colorAccent"
        android:textSize="@dimen/controls_button_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Manage Requests -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/manageRequestsButton"
        android:text="@string/manage_requests"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="2dp"
        android:layout_toRightOf="@id/separator"
        android:layout_alignBaseline="@id/inviteMembersButton"
        android:padding="@dimen/controls_button_text_padding"
        android:fontFamily="sans-serif-medium"
        app:backgroundTint="@color/colorAccent"
        android:textSize="@dimen/controls_button_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <!-- Delete Group -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/deleteGroupButton"
        android:text="@string/delete_group"
        android:paddingTop="@dimen/controls_button_text_padding"
        android:paddingBottom="@dimen/controls_button_text_padding"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:fontFamily="sans-serif-medium"
        app:backgroundTint="@color/subtleRed"
        android:layout_below="@id/manageRequestsButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/controls_button_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Edit Group -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/editGroupButton"
        android:text="@string/edit_group"
        android:padding="@dimen/controls_button_text_padding"
        android:fontFamily="sans-serif-medium"
        app:backgroundTint="@color/colorAccent"
        android:layout_toLeftOf="@id/deleteGroupButton"
        android:layout_alignBaseline="@id/deleteGroupButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/controls_button_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>